<resources>
    <!-- App Credentials-->
    <string name="app_name">Cryptick</string>

    <!-- Login Strings-->
    <string name="hint_enter_email">Enter E-mail</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_account">Dont have an account?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="register_cryptick">Register with Cryptick</string>

    <!-- Instructions and Loading Text -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_check_inbox">Please check your inbox for your password</string>

    <!-- Errors -->
    <string name="dialog_title_error">Error</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="log_error_invalid_provider">"Invalid provider: "</string>
    <string name="log_error_failed_to_change_password">"Failed to change the password: "</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_you_didnt_give_permissions">You must give Cryptick permission to access your Google account information if you want to use Google sign-in.</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>

    <!-- RegisterActivity-->
    <string name="register_error_message">Please make sure you enter first name, email and password!</string>
    <string name="action_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="buy">BUY</string>

    <string name="tick_dialog">Are you sure you want to use a tick?</string>
    <string name="tick_dialog_message">Use a tick to view this message now! Remaining: </string>

    <string name="no_tick">Sorry you are out of ticks!</string>
    <string name="buy_tick">Buy ticks from the Store</string>
    <string name="buy_ticks">Select number of ticks to buy</string>s
    <string name="are_you_sure">Are you sure you want to buy?</string>
</resources>
