<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/indigo_light"
    android:fillViewport="false">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/indigo_light"
        android:orientation="vertical"
        android:padding="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:focusableInTouchMode="false"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:titleTextColor="@color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/linear_layout_create_account_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/indigo_light"
            android:orientation="vertical"
            android:padding="@dimen/margin_normal">

            <TextView
                android:id="@+id/dontAccountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/register_cryptick"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/indigo_dark" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_small"
                android:contentDescription="@string/app_name"
                android:src="@android:drawable/sym_def_app_icon" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inpute_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/hint_enter_name"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/edit_text_padding"
                    android:textSize="@dimen/edit_text_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/hint_enter_email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/edit_text_padding"
                    android:textSize="@dimen/edit_text_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/hint_enter_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/edit_text_padding"
                    android:textSize="@dimen/edit_text_text_size" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@color/indigo_dark"
                android:text="@string/sign_up"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>